@@ -1,3 +1,13 @@
+2003-12-31 David Anderson <davea@sgi.com>
+      * dwarf_init_finish.c: added #error to detect and describe
+  	absence of libelf.h.
+      * README: Added mention of libelf.h requirement, minor
+	cleanout of obsolete comments, added configure example.
+      * Makefile.in: Removed bogus LIBS line, updated copyright date.
+      * acconfig.h: Updated copyright date.
+      * config.guess config.sub: new versions from automake-1.6.
+      * config.h.in configure: Regenerated.
+
 2003-12-15 David Anderson <davea@sgi.com>
       * dwarf_init_finish.c (_dwarf_setup): test for (section_size)
         was wrong for eh_frame section. Changed this one to
